[project]
name = "blockchain-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasketch>=1.7.0",
    "db-dtypes>=1.4.4",
    "dynaconf>=3.2.12",
    "google>=3.0.0",
    "google-cloud-bigquery>=3.38.0",
    "google-cloud-bigquery-storage>=2.34.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.0.1",
    "langchain-openai>=1.0.2",
    "motor>=3.7.1",
    "opensearch-py>=3.1.0",
    "pandas>=2.3.3",
    "pandas-toon>=0.1.0",
    "pip>=25.3",
    "psycopg2-binary>=2.9.11",
    "redis>=7.1.0",
    "spacy>=3.8.9",
    "tabulate>=0.9.0",
]
